; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_if_sniff.c_sniff_connect.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_if_sniff.c_sniff_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sniff_connected = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"E276: Error connecting to SNiFF+\00", align 1
@init_cmds = common dso_local global i64* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sniff_connect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sniff_connect() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @sniff_connected, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %30

5:                                                ; preds = %0
  %6 = call i64 (...) @ConnectToSniffEmacs()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %5
  %9 = call i32 @_(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  %10 = call i32 @vi_error_msg(i32 %9)
  br label %30

11:                                               ; preds = %5
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %26, %11
  %13 = load i64*, i64** @init_cmds, align 8
  %14 = load i32, i32* %1, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i64, i64* %13, i64 %15
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %29

19:                                               ; preds = %12
  %20 = load i64*, i64** @init_cmds, align 8
  %21 = load i32, i32* %1, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds i64, i64* %20, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @vi_exec_cmd(i64 %24)
  br label %26

26:                                               ; preds = %19
  %27 = load i32, i32* %1, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %1, align 4
  br label %12

29:                                               ; preds = %12
  br label %30

30:                                               ; preds = %4, %29, %8
  ret void
}

declare dso_local i64 @ConnectToSniffEmacs(...) #1

declare dso_local i32 @vi_error_msg(i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @vi_exec_cmd(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
